pipe nearly complete, waiting for lyrics to finish

--- a/sandbox/pipe.ipynb
+++ b/sandbox/pipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "db = MongoClient().billboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = db.spotfy.find()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(map(lambda r: [r['metadata']['artists'][0]['name'],\n",
+    "                        r['metadata']['album']['id'],\n",
+    "                        r['metadata']['album']['album_type'],\n",
+    "                        r['metadata']['album']['total_tracks'],\n",
+    "                        r['metadata']['album']['release_date'],\n",
+    "                        r['metadata']['album']['release_date_precision'],\n",
+    "                        r['metadata']['disc_number'],\n",
+    "                        r['metadata']['duration_ms'],\n",
+    "                        r['metadata']['explicit'],\n",
+    "                        r['metadata']['id'],\n",
+    "                        r['metadata']['name'],\n",
+    "                        r['metadata']['popularity'],\n",
+    "                        r['metadata']['track_number'],\n",
+    "                        r['audio_features']['danceability'],\n",
+    "                        r['audio_features']['energy'],\n",
+    "                        r['audio_features']['acousticness'],\n",
+    "                        r['audio_features']['key'],\n",
+    "                        r['audio_features']['loudness'],\n",
+    "                        r['audio_features']['mode'],\n",
+    "                        r['audio_features']['speechiness'],\n",
+    "                        r['audio_features']['instrumentalness'],\n",
+    "                        r['audio_features']['liveness'],\n",
+    "                        r['audio_features']['valence'],\n",
+    "                        r['audio_features']['tempo'],\n",
+    "                        r['audio_features']['time_signature'],\n",
+    "                        r['_id']\n",
+    "                       ], db.spotify.find()), \n",
+    "                  columns=\n",
+    "                       ['artist',\n",
+    "                        'album_id',\n",
+    "                        'album_type',\n",
+    "                        'total_tracks',\n",
+    "                        'release_date',\n",
+    "                        'release_date_precision',\n",
+    "                        'disc_number',\n",
+    "                        'duration_ms',\n",
+    "                        'explicit',\n",
+    "                        'track_id',\n",
+    "                        'title',\n",
+    "                        'popularity',\n",
+    "                        'track_number',\n",
+    "                        'danceability',\n",
+    "                        'energy',\n",
+    "                        'acousticness',\n",
+    "                        'key',\n",
+    "                        'loudness',\n",
+    "                        'mode',\n",
+    "                        'speechiness',\n",
+    "                        'instrumentalness',\n",
+    "                        'liveness',\n",
+    "                        'valence',\n",
+    "                        'tempo',\n",
+    "                        'time_signature',\n",
+    "                        'obj_id'\n",
+    "                       ])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = pd.DataFrame(map(lambda r: [r['metadata']['artists'][0]['name'],\n",
+    "                        r['metadata']['album']['id'],\n",
+    "                        r['metadata']['album']['album_type'],\n",
+    "                        r['metadata']['album']['total_tracks'],\n",
+    "                        r['metadata']['album']['release_date'],\n",
+    "                        r['metadata']['album']['release_date_precision'],\n",
+    "                        r['metadata']['disc_number'],\n",
+    "                        r['metadata']['duration_ms'],\n",
+    "                        r['metadata']['explicit'],\n",
+    "                        r['metadata']['id'],\n",
+    "                        r['metadata']['name'],\n",
+    "                        r['metadata']['popularity'],\n",
+    "                        r['metadata']['track_number'],\n",
+    "                        r['audio_features']['danceability'],\n",
+    "                        r['audio_features']['energy'],\n",
+    "                        r['audio_features']['acousticness'],\n",
+    "                        r['audio_features']['key'],\n",
+    "                        r['audio_features']['loudness'],\n",
+    "                        r['audio_features']['mode'],\n",
+    "                        r['audio_features']['speechiness'],\n",
+    "                        r['audio_features']['instrumentalness'],\n",
+    "                        r['audio_features']['liveness'],\n",
+    "                        r['audio_features']['valence'],\n",
+    "                        r['audio_features']['tempo'],\n",
+    "                        r['audio_features']['time_signature'],\n",
+    "                        None\n",
+    "                       ], db.spotify_nillboard.find()), \n",
+    "                  columns=\n",
+    "                       ['artist',\n",
+    "                        'album_id',\n",
+    "                        'album_type',\n",
+    "                        'total_tracks',\n",
+    "                        'release_date',\n",
+    "                        'release_date_precision',\n",
+    "                        'disc_number',\n",
+    "                        'duration_ms',\n",
+    "                        'explicit',\n",
+    "                        'track_id',\n",
+    "                        'title',\n",
+    "                        'popularity',\n",
+    "                        'track_number',\n",
+    "                        'danceability',\n",
+    "                        'energy',\n",
+    "                        'acousticness',\n",
+    "                        'key',\n",
+    "                        'loudness',\n",
+    "                        'mode',\n",
+    "                        'speechiness',\n",
+    "                        'instrumentalness',\n",
+    "                        'liveness',\n",
+    "                        'valence',\n",
+    "                        'tempo',\n",
+    "                        'time_signature',\n",
+    "                        'obj_id'\n",
+    "                       ])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.append(df2, ignore_index=True, sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UNTESTED\n",
+    "lyrics_df = pd.DataFrame(map(lambda r: [r['_id'],\n",
+    "                                        r['response_artist'],\n",
+    "                                        r['response_title'],\n",
+    "                                        r['dict_sentiment']['pos'],\n",
+    "                                        r['dict_sentiment']['neg'],\n",
+    "                                        r['dict_sentiment']['wordcount']], \n",
+    "                            db.lyrics.find()), columns=\n",
+    "                                       ['track_id',\n",
+    "                                        'response_artist',\n",
+    "                                        'response_title',\n",
+    "                                        'poscount',\n",
+    "                                        'negcount',\n",
+    "                                        'wordcount'\n",
+    "                                       ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# UNTESTED\n",
+    "bbdf = pd.DataFrame(map(lambda r: [r['_id'],\n",
+    "                                  r['artist'],\n",
+    "                                  r['title'],\n",
+    "                                  r['date'],\n",
+    "                                  r['peakPos'],\n",
+    "                                  r['weeks']], \n",
+    "                            db.hot100filtered.find()), columns=\n",
+    "                                 ['obj_id',\n",
+    "                                  'bb_artist',\n",
+    "                                  'bb_title',\n",
+    "                                  'date',\n",
+    "                                  'peakPos',\n",
+    "                                  'weeks'\n",
+    "                                 ])"
    ]
   },
   {
